src/App.module.css
.main {
    display: flex;
    gap: 20px;
    background-color: rgb(10, 10, 10);
}

.content {
    padding: 10px;
    height: calc(100vh - 92px);
    overflow: scroll;
    scrollbar-width: none;
    background-color: rgb(10, 10, 10);
}

.app {
    background-color: rgb(10, 10, 10);
    padding: 0%;
    margin: 0%;
}

@media (max-width: 900px) and (max-height: 900px) {
    .explorer{
        margin: 20px;
        position: absolute;
        bottom: 10px;
        display: inline-block;
        width: calc(100vw - 20px);
        /* background-color: aqua; */
        display: flex;
        height: 35px;
        align-items: center;
        >ul{
            margin-right: 15px;
            display: flex;
            justify-content: space-between;
            width: calc(100vw);
            height:35px;
            >li>a>div {
                border-bottom: transparent;
            }
        }
    }
    .main{
        display: block;
        height: calc(100vh - 60px);
    }
}

